<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:backgroundTint="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home_Page_LoaderActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="@drawable/backcontainer">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/back_btn"
                android:src="@drawable/arrow_back_24"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="257dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/about_page"
                android:textColor="@color/white"
                android:textSize="26sp" />
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:background="@drawable/round_container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="cursive"
                    android:text="@string/estate_maintenance_tracking_system"
                    android:textAlignment="center"
                    android:textColor="#273D63"
                    android:textSize="32sp"
                    tools:ignore="TextSizeCheck" />

                <ScrollView
                    android:id="@+id/pcontainerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/containerabout22"
                    tools:ignore="NestedScrolling">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/about_us"
                            android:textSize="30sp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/the_college_campus_does_not_currently_have_a_simplified_and_effective_method_for_processing_estate_maintenance_requests_this_shortcoming_leads_to_sluggish_reaction_times_ineffective_resource_management_and_inefficient_maintenance_operations"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:layout_marginTop="10dp"
                            tools:ignore="VisualLintLongText" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/a_maintenance_tracking_system_is_a_software_or_a_system_designed_to_manage_and_track_maintenance_activities_in_various_contexts_such_as_facilities_equipment_vehicles_or_any_assets_that_require_maintenance_its_primary_purpose_is_to_ensure_that_maintenance_tasks_are_carried_out_efficiently_effectively_and_on_schedule_to_minimize_downtime_reduce_costs_and_ensure_the_reliable_operation_of_assets"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:layout_marginTop="10dp"
                            tools:ignore="VisualLintLongText"
                            android:textAlignment="center"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/a_maintenance_tracking_system_is_a_software_or_a_system_designed_to_manage_and_track_maintenance_activities_in_various_contexts_such_as_facilities_equipment_vehicles_or_any_assets_that_require_maintenance_its_primary_purpose_is_to_ensure_that_maintenance_tasks_are_carried_out_efficiently_effectively_and_on_schedule_to_minimize_downtime_reduce_costs_and_ensure_the_reliable_operation_of_assets"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:layout_marginTop="10dp"
                            tools:ignore="VisualLintLongText"
                            android:textAlignment="center"/>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>
