<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="13dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/round_buttonhome"
    xmlns:tools="http://schemas.android.com/tools">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/icon22"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center|left"
            android:contentDescription="@string/todo"
            android:src="@drawable/error_24"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ReqTitle"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:textColor="#009688"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="My Location" />

            <TextView
                android:id="@+id/ReqDescription"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="TextSizeCheck"
                tools:text="My long long long description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/assignbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_marginTop="3dp"

                android:textColor="@color/white"
                android:backgroundTint="#02355E"
                android:text="@string/assign" />
            <Button
                android:id="@+id/forwardbtn"
                android:layout_width="match_parent"
                android:layout_marginEnd="6dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/forward" />
        </LinearLayout>
    </GridLayout>
</RelativeLayout>
