<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileFragment">
    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/curved_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@drawable/background33"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/profile"
            app:shapeAppearanceOverlay="@style/circular" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="8sp"
            android:textColor="@color/black"
            android:text="Gabber Singh"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:letterSpacing="0.1"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:text="General"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pcontainers"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="34dp"
                    android:contentDescription="@string/department_icon"
                    android:src="@drawable/department_24"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/tvdepartment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:letterSpacing="0.02"
                    android:textColor="@color/white"
                    android:text="Department: "
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/department"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="34dp"
                    android:contentDescription="@string/year_icon"
                    android:src="@drawable/year_24" />

                <TextView
                    android:id="@+id/tvStdyear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="College ID:"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/stdID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:letterSpacing="0.1"
            android:text="Personal"
            android:textSize="16dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pcontainers"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="34dp"
                    android:contentDescription="@string/email_icon"
                    android:src="@drawable/email_24"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="E-mail: "
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:letterSpacing="0.02"
                    android:layout_marginStart="16dp" />

                <TextView
                    android:id="@+id/stdEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text=""
                    android:textSize="17sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:padding="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="34dp"
                    android:contentDescription="@string/phone_icon"
                    android:src="@drawable/phone_24"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/tvContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone: "
                    android:textColor="@color/white"
                    android:letterSpacing="0.02"
                    android:textSize="18sp"
                    android:layout_marginStart="16dp" />

                <TextView
                    android:id="@+id/userContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="975+"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </LinearLayout>

            <!-- Gender -->
            <LinearLayout
                android:id="@+id/layout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:padding="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="34dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/gender_24"
                    android:contentDescription="@string/gender_icon" />

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender: "
                    android:textColor="@color/white"
                    android:letterSpacing="0.02"
                    android:textSize="18sp"
                    android:layout_marginStart="16dp" />

                <TextView
                    android:id="@+id/UserGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/editProfile"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/baseline_edit_24"
                android:text="Edit"
                android:backgroundTint="#02355E"
                android:layout_gravity="end"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>
    </LinearLayout>
    </RelativeLayout>
</FrameLayout>